Ui changes for Contact Us Page and About Page

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,4 +1,8 @@
 .resize {
-    width:300px;
-    height: auto;
+    width:290px;
+    height: 290px;
+}
+
+.displayName {
+    padding-left: 15%;
 }
