--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,8 +1,29 @@
 .resize {
-    width:290px;
-    height: 290px;
+  width: 290px;
+  height: 290px;
+}
+
+.teamImg {
+  width: 800px;
+  height: 400px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .displayName {
-    padding-left: 15%;
+  padding-left: 15%;
+}
+
+.centerText {
+  text-align: center;
+}
+
+h1,
+h2,
+p {
+  font-family: "Verdana", Times, serif;
 }
